Вроде немношко победил фронт.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link href="/application.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+<div id="application"></div>
 
+<script src="/application.js" type="application/javascript"></script>
+<script src="//localhost:35730/livereload.js" type="text/javascript"></script>
 </body>
 </html>
